--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -15,4 +15,9 @@
 
     font-size: 20px;
 
+    transition: transform 0.4s ease-in-out;
+
+    &.validated {
+        transform: translateY(-100px);
+    }
 }
