--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -20,3 +20,12 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+// VARIABLES
+
+// fonts
+$clashDisplay: 'Clash Display', sans-serif;
+// fonts
+
+
+// VARIABLES
