--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -30,6 +30,10 @@
 
         transition: transform 0.4s ease-in-out;
 
+        &::placeholder {
+            font-weight: 100;
+        }
+
         &.validated {
             transform: translateY(-200%);
         }
