remanaged the states and the disposition in flexbox of the searchbar and title

--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -1,10 +1,10 @@
 @import '../../globalStyles.scss';
 
 #title {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
+    // position: absolute;
+    // top: 50px;
+    // left: 50%;
+    // transform: translateX(-50%);
 
     font-family: $clashDisplay;
     font-size: 60px;
