--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -5,7 +5,7 @@
     height: 100%;
 
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 
     #searchBar {
