--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,41 +1,69 @@
-@import '../../globalStyles.scss';
+@import "../../globalStyles.scss";
 
 #input_container {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 
-    #searchBar {
+  #searchBar {
+    width: 50%;
+    height: 50px;
 
-        width: 50%;
-        height: 50px;
+    border-radius: 50px;
+    border: none;
 
-        border-radius: 50px;
-        border: none;
+    background-color: #f4f9e9;
 
-        background-color: #F4F9E9;
+    outline: none;
 
-        outline: none;
+    padding: 10px 20px;
 
-        padding: 15px;
+    font-size: 40px;
+    font-family: $clashDisplay;
+    font-weight: 600;
 
+    transition: transform 0.4s ease-in-out;
 
-        font-size: 40px;
-        font-family: $clashDisplay;
-        font-weight: 600;
-
-
-        transition: transform 0.4s ease-in-out;
-
-        &::placeholder {
-            font-weight: 100;
-        }
-
-        &.validated {
-            transform: translateY(-200%);
-        }
+    &.validated {
+        transform: translateY(-50px);
     }
+
+    &::placeholder {
+      font-weight: 100;
+    }
+  }
 }
+
+// RESPONSIVE <WIDTH>
+
+@media screen and (max-width: 1080px) {
+  #input_container {
+    #searchBar {
+      width: 60%;
+
+      padding: 5px 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 650px) {
+  #input_container {
+    #searchBar {
+      width: 80%;
+      font-size: 30px;
+    }
+  }
+}
+
+// RESPONSIVE <WIDTH>
+
+//RESPONSIVE <HEIGHT>
+
+// @media screen and (max-height: ) {
+
+// }
+
+//RESPONSIVE <HEIGHT>
