--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -12,4 +12,22 @@
     text-align: center;
 
     color: $text_color;
+
+
+
+    @media screen and (max-width: 630px) {
+        font-size: 45px;
+        margin-top: 50px;
+    }
+    @media screen and (max-width: 460px) {
+        font-size: 35px;
+    }
+
 }
+
+
+// RESPONSIVE
+
+
+
+// RESPONSIVE 
